--- a/PaymentServiceNet/PaymentServiceNet/appsettings.json
+++ b/PaymentServiceNet/PaymentServiceNet/appsettings.json
@@ -3,8 +3,7 @@
     "Secreta": "Palabra secreta para validar los token, cambiar por una personalizada"
   },
   "ConnectionStrings": {
-    "ConexionSql": "server=.;database=PaymentServiceNetNET7;Trusted_Connection=true;TrustServerCertificate=true;MultipleActiveResultSets=true",
-    //"ConexionOracle": "Data Source=localhost:1521/orcl;User Id=c##moviesuser;Password=admin;"
+    "ConexionSql": "server=.;database=stracon_db;Trusted_Connection=true;TrustServerCertificate=true;MultipleActiveResultSets=true"
   },
   "Serilog": {
     "Using": ["Serilog.Sinks.Console","Serilog.Sinks.File"],
