--- a/PaymentServiceNet/PaymentServiceNet/appsettings.Development.json
+++ b/PaymentServiceNet/PaymentServiceNet/appsettings.Development.json
@@ -1,4 +1,21 @@
 {
+  "ApiSettings": {
+    "Secreta": "Stracon@Jwt#2026!d8F3kL9QmA2RZxV7HcWJpS5N"
+  },
+  "ConnectionStrings": {
+    "ConexionSql": "Server=localhost,14333;Database=stracon_db;User Id=sa;Password=P@ssw0rd?ts;Encrypt=False;TrustServerCertificate=True"
+  },
+
+  "Cloudinary": {
+    "CloudName": "xxxx",
+    "ApiKey": "xxxx",
+    "ApiSecret": "xxxx",
+    "DefaultFolder": "stracon",
+    "LogoPublicId": "tuvistazo/logo",
+    "ProtectedRentingPublicId": "tuvistazo/default_renting",
+    "ProtectedEmploymentPublicId": "tuvistazo/default_employment",
+    "ProtectedSocialHelpPublicId": "tuvistazo/default_help"
+  },
   "Serilog": {
     "Using": [ "Serilog.Sinks.Console", "Serilog.Sinks.File" ],
     "MinimumLevel": {
