--- a/PaymentServiceNet/PaymentServiceNet/appsettings.json
+++ b/PaymentServiceNet/PaymentServiceNet/appsettings.json
@@ -1,12 +1,22 @@
 {
   "ApiSettings": {
-    "Secreta": "Palabra secreta para validar los token, cambiar por una personalizada"
+    "Secreta": "Stracon@Jwt#2026!d8F3kL9QmA2RZxV7HcWJpS5N"
   },
   "ConnectionStrings": {
-    "ConexionSql": "server=.;database=stracon_db;Trusted_Connection=true;TrustServerCertificate=true;MultipleActiveResultSets=true"
+    "ConexionSql": "Server=localhost,14333;Database=stracon_db;User Id=sa;Password=P@ssw0rd?ts;Encrypt=False;TrustServerCertificate=True"
+  },
+  "Cloudinary": {
+    "CloudName": "xxxx",
+    "ApiKey": "xxxx",
+    "ApiSecret": "xxxx",
+    "DefaultFolder": "stracon",
+    "LogoPublicId": "tuvistazo/logo",
+    "ProtectedRentingPublicId": "tuvistazo/default_renting",
+    "ProtectedEmploymentPublicId": "tuvistazo/default_employment",
+    "ProtectedSocialHelpPublicId": "tuvistazo/default_help"
   },
   "Serilog": {
-    "Using": ["Serilog.Sinks.Console","Serilog.Sinks.File"],
+    "Using": [ "Serilog.Sinks.Console", "Serilog.Sinks.File" ],
     "MinimumLevel": {
       "Default": "Information",
       "Override": {
@@ -28,10 +38,10 @@
         }
       }
     ],
-      "Enrich": ["FromLogContext","WithMachineName","WithThreadId"],
-      "Destructure": [],
-      "Properties": {
-      }
-    },
+    "Enrich": [ "FromLogContext", "WithMachineName", "WithThreadId" ],
+    "Destructure": [],
+    "Properties": {
+    }
+  },
   "AllowedHosts": "*"
 }
