--- a/PaymentServiceNet/PaymentServiceNet.Application/PaymentServiceNet.Application.csproj
+++ b/PaymentServiceNet/PaymentServiceNet.Application/PaymentServiceNet.Application.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="12.0.1" />
+    <PackageReference Include="CloudinaryDotNet" Version="1.28.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="7.0.0" />
     <PackageReference Include="StyleCop.Analyzers" Version="1.1.118">
       <PrivateAssets>all</PrivateAssets>
