--- a/PaymentServiceNet/PaymentServiceNet.Core/PaymentServiceNet.Core.csproj
+++ b/PaymentServiceNet/PaymentServiceNet.Core/PaymentServiceNet.Core.csproj
@@ -13,6 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Http.Features" Version="5.0.17" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="7.0.7" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.7" />
     <PackageReference Include="StyleCop.Analyzers" Version="1.1.118">
