--- a/PaymentServiceNet/PaymentServiceNet/appsettings.Development.json
+++ b/PaymentServiceNet/PaymentServiceNet/appsettings.Development.json
@@ -5,16 +5,12 @@
   "ConnectionStrings": {
     "ConexionSql": "Server=localhost,14333;Database=stracon_db;User Id=sa;Password=P@ssw0rd?ts;Encrypt=False;TrustServerCertificate=True"
   },
-
   "Cloudinary": {
-    "CloudName": "xxxx",
-    "ApiKey": "xxxx",
-    "ApiSecret": "xxxx",
+    "CloudName": "dhtqqqm6v",
+    "ApiKey": "913758167669777",
+    "ApiSecret": "JL6Bv8wOXBsmcp_JO3_JQSVDBMo",
     "DefaultFolder": "stracon",
-    "LogoPublicId": "tuvistazo/logo",
-    "ProtectedRentingPublicId": "tuvistazo/default_renting",
-    "ProtectedEmploymentPublicId": "tuvistazo/default_employment",
-    "ProtectedSocialHelpPublicId": "tuvistazo/default_help"
+    "SuppliersFolder": "suppliers"
   },
   "Serilog": {
     "Using": [ "Serilog.Sinks.Console", "Serilog.Sinks.File" ],
