--- a/SupplierServiceNet/SupplierServiceNet.Core/SupplierServiceNet.Core.csproj
+++ b/SupplierServiceNet/SupplierServiceNet.Core/SupplierServiceNet.Core.csproj
@@ -23,7 +23,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\PaymentServiceNet.CrossCutting\SupplierServiceNet.CrossCutting.csproj" />
+    <ProjectReference Include="..\SupplierServiceNet.CrossCutting\SupplierServiceNet.CrossCutting.csproj" />
   </ItemGroup>
   <!-- Script Creado por Raúl Armas-->
   <Target Name="AssemblyVersion" BeforeTargets="CoreCompile" DependsOnTargets="PrepareForBuild">
