--- a/SupplierServiceNet/SupplierServiceNet.Infraestructure/SupplierServiceNet.Infrastructure.csproj
+++ b/SupplierServiceNet/SupplierServiceNet.Infraestructure/SupplierServiceNet.Infrastructure.csproj
@@ -21,12 +21,12 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\PaymentServiceNet.Core\SupplierServiceNet.Core.csproj" />
-	<ProjectReference Include="..\PaymentServiceNet.CrossCutting\SupplierServiceNet.CrossCutting.csproj" />
+    <Folder Include="Migrations\" />
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Migrations\" />
+    <ProjectReference Include="..\SupplierServiceNet.Core\SupplierServiceNet.Core.csproj" />
+    <ProjectReference Include="..\SupplierServiceNet.CrossCutting\SupplierServiceNet.CrossCutting.csproj" />
   </ItemGroup>
   <!-- Script Creado por Raúl Armas-->
   <Target Name="AssemblyVersion" BeforeTargets="CoreCompile" DependsOnTargets="PrepareForBuild">
